--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -58,14 +58,14 @@
 
     <div id="fh5co-practice" class="fh5co-bg-section">
         <div class="container-bs">
-            <div class="row-bs animate-box">
+            <div class="row-bs">
                 <div class="col-md-8-bs col-md-offset-2-bs text-center-bs fh5co-heading">
                     <h2>Our Legal Practice Area</h2>
                     <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
                 </div>
             </div>
             <div class="row-bs">
-                <div class="col-md-4 text-center-bs animate-box">
+                <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
 							<i class="icon-home"></i>
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 text-center-bs animate-box">
+                <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
 							<i class="icon-eye"></i>
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 text-center-bs animate-box">
+                <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
 							<i class="icon-shopping-cart"></i>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 text-center-bs animate-box">
+                <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
 							<i class="icon-umbrella"></i>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 text-center-bs animate-box">
+                <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
 							<i class="icon-heart"></i>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 text-center-bs animate-box">
+                <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
 							<i class="icon-help"></i>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12 text-center-bs animate-box">
+                <div class="col-md-12-bs text-center-bs">
                     <p><a class="btn btn-primary btn-lg btn-learn" href="#">View More</a></p>
                 </div>
             </div>
