added bg secondary

--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -56,7 +56,7 @@
 
 
 
-    <div id="fh5co-practice" class="fh5co-bg-section">
+    <div id="fh5co-practice" class="bg-secondary-bs">
         <div class="container-bs">
             <div class="row-bs">
                 <div class="col-md-8-bs col-md-offset-2-bs text-center-bs fh5co-heading">
