--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -60,7 +60,7 @@
         <div class="container-bs">
             <div class="row-bs">
                 <div class="col-md-8-bs col-md-offset-2-bs text-center-bs fh5co-heading">
-                    <h2>Our Legal Practice Area</h2>
+                    <h2 class="section-heading-bs">Our Legal Practice Area</h2>
                     <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
                 </div>
             </div>
