attempt to fix margins on cards

--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -56,8 +56,8 @@
 
 
 
-    <div id="fh5co-practice" class="bg-secondary-bs">
-        <div class="container-bs">
+    <div id="cards" class="bg-secondary-bs">
+        <div class="container-bs" style="margin-bottom: 0px;">
             <div class="row-bs">
                 <div class="col-md-8-bs col-md-offset-2-bs text-center-bs fh5co-heading">
                     <h2 class="section-heading-bs">Our Legal Practice Area</h2>
