fixed margin bottom on card heading

--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -59,7 +59,7 @@
     <div id="cards" class="bg-secondary-bs">
         <div class="container-bs" style="margin-bottom: 0px;">
             <div class="row-bs">
-                <div class="col-md-8-bs col-md-offset-2-bs text-center-bs fh5co-heading">
+                <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
                     <h2 class="section-heading-bs">Our Legal Practice Area</h2>
                     <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
                 </div>
