--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -61,7 +61,7 @@
             <div class="row-bs">
                 <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
                     <h2 class="section-heading-bs">Our Legal Practice Area</h2>
-                    <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                    <p class="bs">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
                 </div>
             </div>
             <div class="row-bs">
