possible padding fix by making cards a section

--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -56,7 +56,7 @@
 
 
 
-    <div id="cards" class="bg-secondary-bs">
+    <section id="cards" class="bg-secondary-bs">
         <div class="container-bs" style="margin-bottom: 0px;">
             <div class="row-bs">
                 <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
@@ -136,22 +136,22 @@
                 </div>
             </div>
         </div>
-    </div>
+        </div>
 
 
-    <!-- jQuery -->
-    <script src="js/jquery.min.js"></script>
+        <!-- jQuery -->
+        <script src="js/jquery.min.js"></script>
 
-    <!-- Bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- Waypoints -->
-    <script src="js/jquery.waypoints.min.js"></script>
-
-
+        <!-- Bootstrap -->
+        <script src="js/bootstrap.min.js"></script>
+        <!-- Waypoints -->
+        <script src="js/jquery.waypoints.min.js"></script>
 
 
-    <!-- Main -->
-    <script src="js/main.js"></script>
+
+
+        <!-- Main -->
+        <script src="js/main.js"></script>
 
 </body>
 
