switched legal for SC descriptions

--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -60,8 +60,8 @@
         <div class="container-bs" style="margin-bottom: 0px;">
             <div class="row-bs">
                 <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
-                    <h2 class="section-heading-bs">Our Legal Practice Area</h2>
-                    <p class="bs">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                    <h2 class="section-heading-bs">Available Positions</h2>
+                    <p class="bs">We offer 9 different opportunities to be a part of our SuperCamp family. Take some time to check out each position and find what speaks to you!</p>
                 </div>
             </div>
             <div class="row-bs">
@@ -71,8 +71,8 @@
 							<i class="icon-home"></i>
 						</span>
                         <div class="desc">
-                            <h3><a href="#">Real Estate Law</a></h3>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h3><a href="#">Site Administrator</a></h3>
+                            <p>Responsible for the overall administrative and customer service success of SuperCamp. Serve as a liaison between QLN and the university.</p>
                         </div>
                     </div>
                 </div>
@@ -82,8 +82,8 @@
 							<i class="icon-eye"></i>
 						</span>
                         <div class="desc">
-                            <h3><a href="#">Insurance Law</a></h3>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h3><a href="#">Site Counselor</a></h3>
+                            <p>Responsible for coaching both campers and staff on how to best handle demanding situations. Oversee camp documentation.</p>
                         </div>
                     </div>
                 </div>
@@ -93,8 +93,8 @@
 							<i class="icon-shopping-cart"></i>
 						</span>
                         <div class="desc">
-                            <h3><a href="#">Business Law</a></h3>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h3><a href="#">Lead Facilitator</a></h3>
+                            <p>Brings mastery of facilitation, depth of knowledge of the curriculum, systems thinking, and leadership skills to create the culture of camp.</p>
                         </div>
                     </div>
                 </div>
@@ -104,8 +104,8 @@
 							<i class="icon-umbrella"></i>
 						</span>
                         <div class="desc">
-                            <h3><a href="#">Personal Injury</a></h3>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h3><a href="#">Facilitator</a></h3>
+                            <p>Instruct Quantum Learning and Life Skills curriculum to the large group, as well as lead academic course-rooms.</p>
                         </div>
                     </div>
                 </div>
@@ -115,8 +115,8 @@
 							<i class="icon-heart"></i>
 						</span>
                         <div class="desc">
-                            <h3><a href="#">Medical Neglegence</a></h3>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h3><a href="#">Logistics Coordinator</a></h3>
+                            <p>Ensure that all logistical systems are in place and maintain a professional, impeccable, well-organized environment at camp.</p>
                         </div>
                     </div>
                 </div>
@@ -126,8 +126,8 @@
 							<i class="icon-help"></i>
 						</span>
                         <div class="desc">
-                            <h3><a href="#">Criminal Defense</a></h3>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h3><a href="#">Office Coordinator</a></h3>
+                            <p>Responsible for many of the clerical functions of camp that support parents, other staff, and correspondence with QLN.</p>
                         </div>
                     </div>
                 </div>
