--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -131,6 +131,39 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-4-bs text-center-bs">
+                    <div class="services">
+                        <span class="icon">
+							<i class="icon-help"></i>
+						</span>
+                        <div class="desc">
+                            <h3><a href="#">Wellness Person</a></h3>
+                            <p>Have a solid understanding of First Aid/CPR procedures, document medical incidents, and maintain clear communication with staff and parents.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4-bs text-center-bs">
+                    <div class="services">
+                        <span class="icon">
+							<i class="icon-help"></i>
+						</span>
+                        <div class="desc">
+                            <h3><a href="#">Senior Team Leader</a></h3>
+                            <p>Encourages consistency among the other Team Leaders and acts as a leadership mentor for returning campers.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4-bs text-center-bs">
+                    <div class="services">
+                        <span class="icon">
+							<i class="icon-help"></i>
+						</span>
+                        <div class="desc">
+                            <h3><a href="#">Team Leader (aka Camp Counselor)</a></h3>
+                            <p>Catalyst for team building and personal growth, all while encouraging camp spirit.</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-12-bs text-center-bs">
                     <p><a class="btn btn-primary btn-lg btn-learn" href="#">View More</a></p>
                 </div>
