added fontawesome icons

--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -68,7 +68,7 @@
                 <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
-							<i class="icon-home"></i>
+							<i class="fa fa-home"></i>
 						</span>
                         <div class="desc">
                             <h3><a href="#">Site Administrator</a></h3>
@@ -79,7 +79,7 @@
                 <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
-							<i class="icon-eye"></i>
+							<i class="fa fa-wrench"></i>
 						</span>
                         <div class="desc">
                             <h3><a href="#">Site Counselor</a></h3>
@@ -90,7 +90,7 @@
                 <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
-							<i class="icon-shopping-cart"></i>
+							<i class="fa fa-user"></i>
 						</span>
                         <div class="desc">
                             <h3><a href="#">Lead Facilitator</a></h3>
@@ -101,7 +101,7 @@
                 <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
-							<i class="icon-umbrella"></i>
+							<i class="fa fa-globe"></i>
 						</span>
                         <div class="desc">
                             <h3><a href="#">Facilitator</a></h3>
@@ -112,7 +112,7 @@
                 <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
-							<i class="icon-heart"></i>
+							<i class="fa fa-calculator"></i>
 						</span>
                         <div class="desc">
                             <h3><a href="#">Logistics Coordinator</a></h3>
@@ -123,7 +123,7 @@
                 <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
-							<i class="icon-help"></i>
+							<i class="fa fa-paperclip"></i>
 						</span>
                         <div class="desc">
                             <h3><a href="#">Office Coordinator</a></h3>
@@ -134,7 +134,7 @@
                 <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
-							<i class="icon-help"></i>
+							<i class="fa fa-plus"></i>
 						</span>
                         <div class="desc">
                             <h3><a href="#">Wellness Person</a></h3>
@@ -145,7 +145,7 @@
                 <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
-							<i class="icon-help"></i>
+							<i class="fa fa-cubes"></i>
 						</span>
                         <div class="desc">
                             <h3><a href="#">Senior Team Leader</a></h3>
@@ -156,7 +156,7 @@
                 <div class="col-md-4-bs text-center-bs">
                     <div class="services">
                         <span class="icon">
-							<i class="icon-help"></i>
+							<i class="fa fa-users"></i>
 						</span>
                         <div class="desc">
                             <h3><a href="#">Team Leader (aka Camp Counselor)</a></h3>
