added links and removed button and unwanted html

--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -1,191 +1,111 @@
-<!DOCTYPE HTML>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Law &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-    <meta name="author" content="FreeHTML5.co" />
-
-    <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
-
-
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
-
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="css/animate.css">
-    <!-- Icomoon Icon Fonts-->
-    <link rel="stylesheet" href="css/icomoon.css">
-    <!-- Bootstrap  -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-
-
-
-
-
-
-    <!-- Theme style  -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- Modernizr JS -->
-    <script src="js/modernizr-2.6.2.min.js"></script>
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-
-<body>
-
-
-
-    <section id="cards" class="bg-secondary-bs">
-        <div class="container-bs" style="margin-bottom: 0px;">
-            <div class="row-bs">
-                <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
-                    <h2 class="section-heading-bs">Available Positions</h2>
-                    <p class="bs">We offer 9 different opportunities to be a part of our SuperCamp family. Take some time to check out each position and find what speaks to you!</p>
-                </div>
+<section id="cards" class="bg-secondary-bs">
+    <div class="container-bs" style="margin-bottom: 0px;">
+        <div class="row-bs">
+            <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
+                <h2 class="section-heading-bs">Available Positions</h2>
+                <p class="bs">We offer 9 different opportunities to be a part of our SuperCamp family. Take some time to check out each position and find what speaks to you!</p>
             </div>
-            <div class="row-bs">
-                <div class="col-md-4-bs text-center-bs">
-                    <div class="services">
-                        <span class="icon">
+        </div>
+        <div class="row-bs">
+            <div class="col-md-4-bs text-center-bs">
+                <div class="services">
+                    <span class="icon">
 							<i class="fa fa-home"></i>
 						</span>
-                        <div class="desc">
-                            <h3><a href="#">Site Administrator</a></h3>
-                            <p>Responsible for the overall administrative and customer service success of SuperCamp. Serve as a liaison between QLN and the university.</p>
-                        </div>
+                    <div class="desc">
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/site-administrator/">Site Administrator</a></h3>
+                        <p>Responsible for the overall administrative and customer service success of SuperCamp. Serve as a liaison between QLN and the university.</p>
                     </div>
                 </div>
-                <div class="col-md-4-bs text-center-bs">
-                    <div class="services">
-                        <span class="icon">
+            </div>
+            <div class="col-md-4-bs text-center-bs">
+                <div class="services">
+                    <span class="icon">
 							<i class="fa fa-wrench"></i>
 						</span>
-                        <div class="desc">
-                            <h3><a href="#">Site Counselor</a></h3>
-                            <p>Responsible for coaching both campers and staff on how to best handle demanding situations. Oversee camp documentation.</p>
-                        </div>
+                    <div class="desc">
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/site-counselor/">Site Counselor</a></h3>
+                        <p>Responsible for coaching both campers and staff on how to best handle demanding situations. Oversee camp documentation.</p>
                     </div>
                 </div>
-                <div class="col-md-4-bs text-center-bs">
-                    <div class="services">
-                        <span class="icon">
+            </div>
+            <div class="col-md-4-bs text-center-bs">
+                <div class="services">
+                    <span class="icon">
 							<i class="fa fa-user"></i>
 						</span>
-                        <div class="desc">
-                            <h3><a href="#">Lead Facilitator</a></h3>
-                            <p>Brings mastery of facilitation, depth of knowledge of the curriculum, systems thinking, and leadership skills to create the culture of camp.</p>
-                        </div>
+                    <div class="desc">
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/lead-facilitator/">Lead Facilitator</a></h3>
+                        <p>Brings mastery of facilitation, depth of knowledge of the curriculum, systems thinking, and leadership skills to create the culture of camp.</p>
                     </div>
                 </div>
-                <div class="col-md-4-bs text-center-bs">
-                    <div class="services">
-                        <span class="icon">
+            </div>
+            <div class="col-md-4-bs text-center-bs">
+                <div class="services">
+                    <span class="icon">
 							<i class="fa fa-globe"></i>
 						</span>
-                        <div class="desc">
-                            <h3><a href="#">Facilitator</a></h3>
-                            <p>Instruct Quantum Learning and Life Skills curriculum to the large group, as well as lead academic course-rooms.</p>
-                        </div>
+                    <div class="desc">
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/facilitator/">Facilitator</a></h3>
+                        <p>Instruct Quantum Learning and Life Skills curriculum to the large group, as well as lead academic course-rooms.</p>
                     </div>
                 </div>
-                <div class="col-md-4-bs text-center-bs">
-                    <div class="services">
-                        <span class="icon">
+            </div>
+            <div class="col-md-4-bs text-center-bs">
+                <div class="services">
+                    <span class="icon">
 							<i class="fa fa-calculator"></i>
 						</span>
-                        <div class="desc">
-                            <h3><a href="#">Logistics Coordinator</a></h3>
-                            <p>Ensure that all logistical systems are in place and maintain a professional, impeccable, well-organized environment at camp.</p>
-                        </div>
+                    <div class="desc">
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/logistics-coordinator/">Logistics Coordinator</a></h3>
+                        <p>Ensure that all logistical systems are in place and maintain a professional, impeccable, well-organized environment at camp.</p>
                     </div>
                 </div>
-                <div class="col-md-4-bs text-center-bs">
-                    <div class="services">
-                        <span class="icon">
+            </div>
+            <div class="col-md-4-bs text-center-bs">
+                <div class="services">
+                    <span class="icon">
 							<i class="fa fa-paperclip"></i>
 						</span>
-                        <div class="desc">
-                            <h3><a href="#">Office Coordinator</a></h3>
-                            <p>Responsible for many of the clerical functions of camp that support parents, other staff, and correspondence with QLN.</p>
-                        </div>
+                    <div class="desc">
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/office-coordinator/">Office Coordinator</a></h3>
+                        <p>Responsible for many of the clerical functions of camp that support parents, other staff, and correspondence with QLN.</p>
                     </div>
                 </div>
-                <div class="col-md-4-bs text-center-bs">
-                    <div class="services">
-                        <span class="icon">
+            </div>
+            <div class="col-md-4-bs text-center-bs">
+                <div class="services">
+                    <span class="icon">
 							<i class="fa fa-plus"></i>
 						</span>
-                        <div class="desc">
-                            <h3><a href="#">Wellness Person</a></h3>
-                            <p>Have a solid understanding of First Aid/CPR procedures, document medical incidents, and maintain clear communication with staff and parents.</p>
-                        </div>
+                    <div class="desc">
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/wellness-person/">Wellness Person</a></h3>
+                        <p>Have a solid understanding of First Aid/CPR procedures, document medical incidents, and maintain clear communication with staff and parents.</p>
                     </div>
                 </div>
-                <div class="col-md-4-bs text-center-bs">
-                    <div class="services">
-                        <span class="icon">
+            </div>
+            <div class="col-md-4-bs text-center-bs">
+                <div class="services">
+                    <span class="icon">
 							<i class="fa fa-cubes"></i>
 						</span>
-                        <div class="desc">
-                            <h3><a href="#">Senior Team Leader</a></h3>
-                            <p>Encourages consistency among the other Team Leaders and acts as a leadership mentor for returning campers.</p>
-                        </div>
+                    <div class="desc">
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/senior-team-leader/">Senior Team Leader</a></h3>
+                        <p>Encourages consistency among the other Team Leaders and acts as a leadership mentor for returning campers.</p>
                     </div>
                 </div>
-                <div class="col-md-4-bs text-center-bs">
-                    <div class="services">
-                        <span class="icon">
+            </div>
+            <div class="col-md-4-bs text-center-bs">
+                <div class="services">
+                    <span class="icon">
 							<i class="fa fa-users"></i>
 						</span>
-                        <div class="desc">
-                            <h3><a href="#">Team Leader (aka Camp Counselor)</a></h3>
-                            <p>Catalyst for team building and personal growth, all while encouraging camp spirit.</p>
-                        </div>
+                    <div class="desc">
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/team-leader/">Team Leader (aka Camp Counselor)</a></h3>
+                        <p>Catalyst for team building and personal growth, all while encouraging camp spirit.</p>
                     </div>
-                </div>
-                <div class="col-md-12-bs text-center-bs">
-                    <p><a class="btn btn-primary btn-lg btn-learn" href="#">View More</a></p>
                 </div>
             </div>
         </div>
-        </div>
-
-
-        <!-- jQuery -->
-        <script src="js/jquery.min.js"></script>
-
-        <!-- Bootstrap -->
-        <script src="js/bootstrap.min.js"></script>
-        <!-- Waypoints -->
-        <script src="js/jquery.waypoints.min.js"></script>
-
-
-
-
-        <!-- Main -->
-        <script src="js/main.js"></script>
-
-</body>
-
-</html>
+    </div>
+    </div>
