added more links

--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -10,8 +10,10 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services">
                     <span class="icon">
-							<i class="fa fa-home"></i>
-						</span>
+                        <a href="http://supercamp.com/stafftestpage/available-positions/site-administrator/" class="icon-link">
+                            <i class="fa fa-home"></i>
+                        </a>    
+					</span>
                     <div class="desc">
                         <h3><a href="http://supercamp.com/stafftestpage/available-positions/site-administrator/">Site Administrator</a></h3>
                         <p>Responsible for the overall administrative and customer service success of SuperCamp. Serve as a liaison between QLN and the university.</p>
@@ -21,7 +23,9 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services">
                     <span class="icon">
+                        <a href="http://supercamp.com/stafftestpage/available-positions/site-counselor/" class="icon-link">
 							<i class="fa fa-wrench"></i>
+                        </a>
 						</span>
                     <div class="desc">
                         <h3><a href="http://supercamp.com/stafftestpage/available-positions/site-counselor/">Site Counselor</a></h3>
@@ -32,7 +36,9 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services">
                     <span class="icon">
+                        <a href="http://supercamp.com/stafftestpage/available-positions/lead-facilitator/" class="icon-link">
 							<i class="fa fa-user"></i>
+                        </a>
 						</span>
                     <div class="desc">
                         <h3><a href="http://supercamp.com/stafftestpage/available-positions/lead-facilitator/">Lead Facilitator</a></h3>
@@ -43,7 +49,9 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services">
                     <span class="icon">
+                        <a href="http://supercamp.com/stafftestpage/available-positions/facilitator/" class="icon-link">
 							<i class="fa fa-globe"></i>
+                        </a>
 						</span>
                     <div class="desc">
                         <h3><a href="http://supercamp.com/stafftestpage/available-positions/facilitator/">Facilitator</a></h3>
@@ -54,7 +62,9 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services">
                     <span class="icon">
+                        <a href="http://supercamp.com/stafftestpage/available-positions/logistics-coordinator/" class="icon-link">
 							<i class="fa fa-calculator"></i>
+                        </a>
 						</span>
                     <div class="desc">
                         <h3><a href="http://supercamp.com/stafftestpage/available-positions/logistics-coordinator/">Logistics Coordinator</a></h3>
@@ -65,7 +75,9 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services">
                     <span class="icon">
+                        <a href="http://supercamp.com/stafftestpage/available-positions/office-coordinator/" class="icon-link">
 							<i class="fa fa-paperclip"></i>
+                        </a>
 						</span>
                     <div class="desc">
                         <h3><a href="http://supercamp.com/stafftestpage/available-positions/office-coordinator/">Office Coordinator</a></h3>
@@ -76,7 +88,9 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services">
                     <span class="icon">
+                        <a href="http://supercamp.com/stafftestpage/available-positions/wellness-person/" class="icon-link">
 							<i class="fa fa-plus"></i>
+                        </a>
 						</span>
                     <div class="desc">
                         <h3><a href="http://supercamp.com/stafftestpage/available-positions/wellness-person/">Wellness Person</a></h3>
@@ -87,7 +101,9 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services">
                     <span class="icon">
+                        <a href="http://supercamp.com/stafftestpage/available-positions/senior-team-leader/" class="icon-link">
 							<i class="fa fa-cubes"></i>
+                        </a>
 						</span>
                     <div class="desc">
                         <h3><a href="http://supercamp.com/stafftestpage/available-positions/senior-team-leader/">Senior Team Leader</a></h3>
@@ -98,7 +114,9 @@
             <div class="col-md-4-bs text-center-bs">
                 <div class="services">
                     <span class="icon">
+                        <a href="http://supercamp.com/stafftestpage/available-positions/team-leader/" class="icon-link">
 							<i class="fa fa-users"></i>
+                        </a>
 						</span>
                     <div class="desc">
                         <h3><a href="http://supercamp.com/stafftestpage/available-positions/team-leader/">Team Leader (aka Camp Counselor)</a></h3>
