--- a/index - Cards 1.html
+++ b/index - Cards 1.html
@@ -3,6 +3,7 @@
         <div class="row-bs">
             <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
                 <h2 class="section-heading-bs">Available Positions</h2>
+                <hr class="bs" style="border-color: #45769C;">
                 <p class="bs">We offer 9 different opportunities to be a part of our SuperCamp family. Take some time to check out each position and find what speaks to you!</p>
             </div>
         </div>
@@ -119,7 +120,8 @@
                         </a>
 						</span>
                     <div class="desc">
-                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/team-leader/">Team Leader (aka Camp Counselor)</a></h3>
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/team-leader/">Team Leader</a></h3>
+                        <h3><a href="http://supercamp.com/stafftestpage/available-positions/team-leader/">(AKA Camp Counselor)</a></h3>
                         <p>Catalyst for team building and personal growth, all while encouraging camp spirit.</p>
                     </div>
                 </div>
