--- a/index - testimonials.html
+++ b/index - testimonials.html
@@ -1,150 +1,38 @@
-<!DOCTYPE HTML>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Law &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-    <meta name="author" content="FreeHTML5.co" />
-
-    <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
-    <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:description" content="" />
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:image" content="" />
-    <meta name="twitter:url" content="" />
-    <meta name="twitter:card" content="" />
-
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
-
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="css/animate.css">
-    <!-- Icomoon Icon Fonts-->
-    <link rel="stylesheet" href="css/icomoon.css">
-    <!-- Bootstrap  -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-
-    <!-- Magnific Popup -->
-    <link rel="stylesheet" href="css/magnific-popup.css">
-
-    <!-- Owl Carousel  -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <!-- Flexslider  -->
-    <link rel="stylesheet" href="css/flexslider.css">
-
-    <!-- Theme style  -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- Modernizr JS -->
-    <script src="js/modernizr-2.6.2.min.js"></script>
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-
-<body>
-
-    <div class="fh5co-loader"></div>
-
-    <div id="page">
-
-        <div id="fh5co-testimonial" class="fh5co-bg-section">
-            <div class="container">
-                <div class="row animate-box">
-                    <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-                        <h2>Testimonials</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-10 col-md-offset-1">
-                        <div class="row animate-box">
-                            <div class="owl-carousel owl-carousel-fullwidth">
-                                <div class="item">
-                                    <div class="testimony-slide active text-center">
-                                        <figure>
-                                            <img src="images/user-1.jpg" alt="user">
-                                        </figure>
-                                        <span>Jean Doe, via <a href="#" class="twitter">Twitter</a></span>
-                                        <blockquote>
-                                            <p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                                                language ocean.&rdquo;</p>
-                                        </blockquote>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="testimony-slide active text-center">
-                                        <figure>
-                                            <img src="images/user-1.jpg" alt="user">
-                                        </figure>
-                                        <span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-                                        <blockquote>
-                                            <p>&ldquo;Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-                                        </blockquote>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="testimony-slide active text-center">
-                                        <figure>
-                                            <img src="images/user-1.jpg" alt="user">
-                                        </figure>
-                                        <span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-                                        <blockquote>
-                                            <p>&ldquo;Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-                                        </blockquote>
-                                    </div>
-                                </div>
-                            </div>
+<section id="carousel" class="bg-primary-bs">
+    <div class="container-bs">
+        <div class="row-bs">
+            <div class="col-md-8-bs col-md-offset-2-bs">
+                <div class="quote"><i class="fa fa-quote-left fa-4x"></i></div>
+                <div class="carousel slide" id="fade-quote-carousel" data-ride="carousel" data-interval="6000">
+                    <!-- Carousel indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#fade-quote-carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#fade-quote-carousel" data-slide-to="1"></li>
+                        <li data-target="#fade-quote-carousel" data-slide-to="2"></li>
+                    </ol>
+                    <!-- Carousel items -->
+                    <div class="carousel-inner">
+                        <div class="active item">
+                            <blockquote>
+                                <p>Every summer I've worked for SuperCamp, I have left with a better understanding of who I am, and where I want to be.</p>
+                            </blockquote>
+                            <div class="profile-circle" style="background-color: rgba(0,0,0,.2);"></div>
+                        </div>
+                        <div class="item">
+                            <blockquote>
+                                <p>Within the first 24 hours, I realized that this would be a life-changing experience. SuperCamp provided me with a safe, caring, and fun work environment.</p>
+                            </blockquote>
+                            <div class="profile-circle" style="background-color: rgba(77,5,51,.2);"></div>
+                        </div>
+                        <div class="item">
+                            <blockquote>
+                                <p>At SuperCamp, I am able to rediscover what makes me awesome and reconnect with other staff that have truly become irreplaceable friends in my life.</p>
+                            </blockquote>
+                            <div class="profile-circle" style="background-color: rgba(145,169,216,.2);"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- jQuery -->
-        <script src="js/jquery.min.js"></script>
-        <!-- jQuery Easing -->
-        <script src="js/jquery.easing.1.3.js"></script>
-        <!-- Bootstrap -->
-        <script src="js/bootstrap.min.js"></script>
-        <!-- Waypoints -->
-        <script src="js/jquery.waypoints.min.js"></script>
-        <!-- Stellar Parallax -->
-        <script src="js/jquery.stellar.min.js"></script>
-        <!-- Carousel -->
-        <script src="js/owl.carousel.min.js"></script>
-        <!-- Flexslider -->
-        <script src="js/jquery.flexslider-min.js"></script>
-        <!-- countTo -->
-        <script src="js/jquery.countTo.js"></script>
-        <!-- Magnific Popup -->
-        <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="js/magnific-popup-options.js"></script>
-        <!-- Main -->
-        <script src="js/main.js"></script>
-
-</body>
-
-</html>
+    </div>
+</section>
