--- a/index - Dates and Locations.html
+++ b/index - Dates and Locations.html
@@ -1,174 +1,148 @@
-<div class="container">
-    <div class="row">
+<!--June-->
+<div class="container-bs">
+    <div class="row-bs">
+        <div class="col-sm-12-bs text-center-bs">
+            <div class="location-breakdown">
+                <img src="thisisanimg.jpg">
+                <h3>Standford University</h3>
+                <hr class="bs">
+                <strong>June 29 - July 8</strong>
+                <p>This is the description.</p>
+                <p>This is a place for a button</p>
+            </div>
+        </div>
+    </div>
+</div>
 
-        <section class="content">
-            <h1>Table Filter</h1>
-            <div class="col-md-8 col-md-offset-2">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="pull-right">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-success btn-filter" data-target="pagado">Pagado</button>
-                                <button type="button" class="btn btn-warning btn-filter" data-target="pendiente">Pendiente</button>
-                                <button type="button" class="btn btn-danger btn-filter" data-target="cancelado">Cancelado</button>
-                                <button type="button" class="btn btn-default btn-filter" data-target="all">Todos</button>
-                            </div>
-                        </div>
-                        <div class="table-container">
-                            <table class="table table-filter">
-                                <tbody>
-                                    <tr data-status="pagado">
-                                        <td>
-                                            <div class="ckbox">
-                                                <input type="checkbox" id="checkbox1">
-                                                <label for="checkbox1"></label>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <a href="javascript:;" class="star">
-                                                <i class="glyphicon glyphicon-star"></i>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <div class="media">
-                                                <a href="#" class="pull-left">
-                                                    <img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-                                                </a>
-                                                <div class="media-body">
-                                                    <span class="media-meta pull-right">Febrero 13, 2016</span>
-                                                    <h4 class="title">
-                                                        Lorem Impsum
-                                                        <span class="pull-right pagado">(Pagado)</span>
-                                                    </h4>
-                                                    <p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr data-status="pendiente">
-                                        <td>
-                                            <div class="ckbox">
-                                                <input type="checkbox" id="checkbox3">
-                                                <label for="checkbox3"></label>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <a href="javascript:;" class="star">
-                                                <i class="glyphicon glyphicon-star"></i>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <div class="media">
-                                                <a href="#" class="pull-left">
-                                                    <img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-                                                </a>
-                                                <div class="media-body">
-                                                    <span class="media-meta pull-right">Febrero 13, 2016</span>
-                                                    <h4 class="title">
-                                                        Lorem Impsum
-                                                        <span class="pull-right pendiente">(Pendiente)</span>
-                                                    </h4>
-                                                    <p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr data-status="cancelado">
-                                        <td>
-                                            <div class="ckbox">
-                                                <input type="checkbox" id="checkbox2">
-                                                <label for="checkbox2"></label>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <a href="javascript:;" class="star">
-                                                <i class="glyphicon glyphicon-star"></i>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <div class="media">
-                                                <a href="#" class="pull-left">
-                                                    <img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-                                                </a>
-                                                <div class="media-body">
-                                                    <span class="media-meta pull-right">Febrero 13, 2016</span>
-                                                    <h4 class="title">
-                                                        Lorem Impsum
-                                                        <span class="pull-right cancelado">(Cancelado)</span>
-                                                    </h4>
-                                                    <p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr data-status="pagado" class="selected">
-                                        <td>
-                                            <div class="ckbox">
-                                                <input type="checkbox" id="checkbox4" checked>
-                                                <label for="checkbox4"></label>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <a href="javascript:;" class="star star-checked">
-                                                <i class="glyphicon glyphicon-star"></i>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <div class="media">
-                                                <a href="#" class="pull-left">
-                                                    <img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-                                                </a>
-                                                <div class="media-body">
-                                                    <span class="media-meta pull-right">Febrero 13, 2016</span>
-                                                    <h4 class="title">
-                                                        Lorem Impsum
-                                                        <span class="pull-right pagado">(Pagado)</span>
-                                                    </h4>
-                                                    <p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr data-status="pendiente">
-                                        <td>
-                                            <div class="ckbox">
-                                                <input type="checkbox" id="checkbox5">
-                                                <label for="checkbox5"></label>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <a href="javascript:;" class="star">
-                                                <i class="glyphicon glyphicon-star"></i>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <div class="media">
-                                                <a href="#" class="pull-left">
-                                                    <img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-                                                </a>
-                                                <div class="media-body">
-                                                    <span class="media-meta pull-right">Febrero 13, 2016</span>
-                                                    <h4 class="title">
-                                                        Lorem Impsum
-                                                        <span class="pull-right pendiente">(Pendiente)</span>
-                                                    </h4>
-                                                    <p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="content-footer">
-                    <p>
-                        Page © - 2016 <br> Powered By <a href="https://www.facebook.com/tavo.qiqe.lucero" target="_blank">TavoQiqe</a>
-                    </p>
+<!--July-->
+<div class="container-bs">
+    <div class="row-bs">
+        <div class="col-sm-4-bs text-center-bs">
+            <div class="location-breakdown">
+                <img src="thisisanimg.jpg">
+                <h3>Standford University</h3>
+                <hr class="bs">
+                <strong>June 29 - July 8</strong>
+                <p>This is the description.</p>
+                <p>This is a place for a button</p>
+                <strong>July 11 - July 16</strong>
+                <p>This is the description.</p>
+                <p>This is a place for a button</p>
+                <strong>July 19 - July 28</strong>
+                <p>This is the description.</p>
+                <p>This is a place for a button</p>
+                <strong>July 31 - August 5</strong>
+                <p>This is the description.</p>
+                <p>This is a place for a button</p>
+            </div>
+        </div>
+        <div class="col-sm-4-bs text-center-bs">
+            <div class="location-breakdown">
+                <img src="thisisanimg.jpg">
+                <h3>Cal State San Marcos</h3>
+                <hr class="bs">
+                <strong>July 6 - July 15</strong>
+                <p>This is a big description of all the sessions.</p>
+                <p>This is a place for a button</p>
+                <strong>July 8 - July 23</strong>
+                <p>This is a big description of all the sessions.</p>
+                <p>This is a place for a button</p>
+            </div>
+        </div>
+        <div class="col-sm-4-bs text-center-bs">
+            <div class="location-breakdown">
+                <img src="thisisanimg.jpg">
+                <h3>Villanova University</h3>
+                <hr class="bs">
+                <strong>July 13 - July 22</strong>
+                <p>This is a big description of all the sessions.</p>
+                <p>This is a place for a button</p>
+                <strong>July 24 - July 19</strong>
+                <p>This is a big description of all the sessions.</p>
+                <p>This is a place for a button</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--August-->
+<div class="container-bs">
+    <div class="row-bs">
+        <div class="col-sm-12-bs text-center-bs">
+            <div class="location-breakdown">
+                <img src="thisisanimg.jpg">
+                <h3>Standford University</h3>
+                <hr class="bs">
+                <strong>July 31 - August 5</strong>
+                <p>This is the description.</p>
+                <p>This is a place for a button</p>
+                <strong>August 8 - 17</strong>
+                <p>This is the description.</p>
+                <p>This is a place for a button</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div id="fh5co-about">
+    <div class="container">
+        <div class="row animate-box">
+            <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                <h2>Our Attorneys</h2>
+                <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="row">
+            <div class="col-md-4 col-sm-4 text-center animate-box">
+                <div class="fh5co-staff">
+                    <img src="images/user-2.jpg" alt="Free HTML5 Templates by gettemplates.co">
+                    <h3>Jean Smith</h3>
+                    <strong class="role">Counsel</strong>
+                    <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+                    <ul class="fh5co-social-icons">
+                        <li><a href="#"><i class="icon-facebook"></i></a></li>
+                        <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        <li><a href="#"><i class="icon-dribbble"></i></a></li>
+                        <li><a href="#"><i class="icon-github"></i></a></li>
+                    </ul>
                 </div>
             </div>
-        </section>
-
+            <div class="col-md-4 col-sm-4 text-center animate-box">
+                <div class="fh5co-staff">
+                    <img src="images/user-2.jpg" alt="Free HTML5 Templates by gettemplates.co">
+                    <h3>Hush Raven</h3>
+                    <strong class="role">Head of International Practice</strong>
+                    <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+                    <ul class="fh5co-social-icons">
+                        <li><a href="#"><i class="icon-facebook"></i></a></li>
+                        <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        <li><a href="#"><i class="icon-dribbble"></i></a></li>
+                        <li><a href="#"><i class="icon-github"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4 text-center animate-box">
+                <div class="fh5co-staff">
+                    <img src="images/user-2.jpg" alt="Free HTML5 Templates by gettemplates.co">
+                    <h3>Alex King</h3>
+                    <strong class="role">Managing Partner, Attorney</strong>
+                    <p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+                    <ul class="fh5co-social-icons">
+                        <li><a href="#"><i class="icon-facebook"></i></a></li>
+                        <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        <li><a href="#"><i class="icon-dribbble"></i></a></li>
+                        <li><a href="#"><i class="icon-github"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
