--- a/index - Dates and Locations.html
+++ b/index - Dates and Locations.html
@@ -7,7 +7,7 @@
                 <h3>Standford University</h3>
                 <hr class="bs">
                 <strong>June 29 - July 8</strong>
-                <p>This is the description.</p>
+                <p>Senior Forum</p>
                 <p>This is a place for a button</p>
             </div>
         </div>
@@ -23,16 +23,16 @@
                 <h3>Standford University</h3>
                 <hr class="bs">
                 <strong>June 29 - July 8</strong>
-                <p>This is the description.</p>
+                <p>Senior Forum</p>
                 <p>This is a place for a button</p>
                 <strong>July 11 - July 16</strong>
-                <p>This is the description.</p>
+                <p>Junior Forum</p>
                 <p>This is a place for a button</p>
                 <strong>July 19 - July 28</strong>
-                <p>This is the description.</p>
+                <p>Senior Forum</p>
                 <p>This is a place for a button</p>
                 <strong>July 31 - August 5</strong>
-                <p>This is the description.</p>
+                <p>Senior Forum</p>
                 <p>This is a place for a button</p>
             </div>
         </div>
@@ -42,10 +42,10 @@
                 <h3>Cal State San Marcos</h3>
                 <hr class="bs">
                 <strong>July 6 - July 15</strong>
-                <p>This is a big description of all the sessions.</p>
+                <p>Senior Forum</p>
                 <p>This is a place for a button</p>
                 <strong>July 8 - July 23</strong>
-                <p>This is a big description of all the sessions.</p>
+                <p>Quantum Academy</p>
                 <p>This is a place for a button</p>
             </div>
         </div>
@@ -55,10 +55,10 @@
                 <h3>Villanova University</h3>
                 <hr class="bs">
                 <strong>July 13 - July 22</strong>
-                <p>This is a big description of all the sessions.</p>
+                <p>Senior Forum</p>
                 <p>This is a place for a button</p>
                 <strong>July 24 - July 19</strong>
-                <p>This is a big description of all the sessions.</p>
+                <p>Junior Forum</p>
                 <p>This is a place for a button</p>
             </div>
         </div>
