--- a/index - Call To Action.html
+++ b/index - Call To Action.html
@@ -13,7 +13,7 @@
             </div>
             <div class="col-lg-4-bs text-center-bs">
                 <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                <p><a href="mailto:your-email@your-domain.com">ThisIsATestEmail@supercamp.com</a></p>
+                <p><a href="mailto:staffing@supercamp.com">Staffing@SuperCamp.com</a></p>
             </div>
             <div class="col-lg-12-bs text-center-bs">
                 <a href="#homeHeading" class="btn btn-primary btn-xl page-scroll">Back to Top</a>
