--- a/index - Call To Action.html
+++ b/index - Call To Action.html
@@ -2,7 +2,7 @@
     <div class="container-bs">
         <div class="row-bs">
             <div class="col-lg-8-bs col-lg-offset-2-bs text-center-bs">
-                <h2 class="section-heading-bs">Let's Get In Touch!</h2>
+                <h2 class="section-heading-bs">Apply Today!</h2>
                 <hr class="bs">
                 <p>Ready to start your SuperCamp experience? That's great! Fill out our <a href="https://supercamp.campintouch.com/ui/forms/application/staff/App">online application</a>, and we'll be in touch! If you have any questions, please visit our
                     <a href="http://www.supercamp.com/stafftestpage/staff-faq/">FAQ page</a> or reach out to us via email or phone.</p>
