got rid of button and tried to change text to white

--- a/index - Call To Action.html
+++ b/index - Call To Action.html
@@ -4,19 +4,16 @@
             <div class="col-lg-8-bs col-lg-offset-2-bs text-center-bs">
                 <h2 class="section-heading-bs">Apply Today!</h2>
                 <hr class="bs">
-                <p>Ready to start your SuperCamp experience? That's great! Fill out our <a href="https://supercamp.campintouch.com/ui/forms/application/staff/App">online application</a>, and we'll be in touch! If you have any questions, please visit our
+                <p style="color: #fff;">Ready to start your SuperCamp experience? That's great! Fill out our <a href="https://supercamp.campintouch.com/ui/forms/application/staff/App">online application</a>, and we'll be in touch! If you have any questions, please visit our
                     <a href="http://www.supercamp.com/stafftestpage/staff-faq/">FAQ page</a> or reach out to us via email or phone.</p>
             </div>
             <div class="col-lg-4-bs col-lg-offset-2-bs text-center-bs">
-                <i class="fa fa-phone fa-3x sr-contact"></i>
-                <p>(800) 228-5327</p>
+                <i style="color: #fff;" class="fa fa-phone fa-3x sr-contact"></i>
+                <p style="color: #fff;">(800) 228-5327</p>
             </div>
             <div class="col-lg-4-bs text-center-bs">
-                <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                <p><a href="mailto:staffing@supercamp.com">Staffing@SuperCamp.com</a></p>
-            </div>
-            <div class="col-lg-12-bs text-center-bs">
-                <a href="#homeHeading" class="btn btn-primary btn-xl page-scroll">Back to Top</a>
+                <i style="color: #fff;" class="fa fa-envelope-o fa-3x sr-contact"></i>
+                <p style="color: #fff;"><a href="mailto:staffing@supercamp.com">Staffing@SuperCamp.com</a></p>
             </div>
         </div>
     </div>
