change color from red to SCC blue

--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -2,7 +2,7 @@
     <div class="container-bs">
         <div class="row">
             <!-- Nav tabs -->
-            <ul class="nav nav-tabs tabs-3 red" role="tablist">
+            <ul class="nav nav-tabs tabs-3 bg-primary-bs" role="tablist">
                 <li class="nav-item waves-effect waves-light">
                     <a class="nav-link active" data-toggle="tab" href="#panel1" role="tab">June</a>
                 </li>
