made all tabs active cuz fuck it

--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -39,7 +39,7 @@
 
                 <!--Panel 2-->
                 <!--July-->
-                <div class="tab-pane fade" id="panel2" role="tabpanel">
+                <div class="tab-pane fade active" id="panel2" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
                             <div class="col-sm-4-bs text-center-bs">
@@ -94,7 +94,7 @@
 
                 <!--Panel 3-->
                 <!--August-->
-                <div class="tab-pane fade" id="panel3" role="tabpanel">
+                <div class="tab-pane fade active" id="panel3" role="tabpanel">
                     <div class="container-bs">
                         <div class="row-bs">
                             <div class="col-sm-12-bs text-center-bs">
