--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -1,6 +1,14 @@
 <section id="datesandlocations">
     <div class="container-bs">
-        <div class="row">
+        <div class="row-bs">
+            <div class="col-md-8-bs col-md-offset-2-bs text-center-bs card-heading">
+                <h2 class="section-heading-bs">Dates and Locations</h2>
+                <hr class="bs" style="border-color: #45769C;">
+                <p class="bs">Starting in 1982, we've hosted amazing camps all over the United States, usually at leading universities. We also work with international partners to bring the SuperCamp experience to teens around the world. More than 70,000 students have
+                    participated...and counting!</p>
+            </div>
+        </div>
+        <div class="row-bs">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs tabs-3 bg-primary-bs" role="tablist">
                 <li class="nav-item waves-effect waves-light">
