change column size

--- a/index - Call To Action.html
+++ b/index - Call To Action.html
@@ -11,7 +11,7 @@
                 <i style="color: #fff;" class="fa fa-phone fa-3x sr-contact"></i>
                 <p style="color: #fff;">(800) 228-5327</p>
             </div>
-            <div class="col-xs-6-bs text-center-bs">
+            <div class="col-xs-6-bs col-lg-offset-2-bs text-center-bs">
                 <i style="color: #fff;" class="fa fa-envelope-o fa-3x sr-contact"></i>
                 <p style="color: #fff;"><a style="color: #97ABBD;" href="mailto:staffing@supercamp.com">Staffing@SuperCamp.com</a></p>
             </div>
