forgot to change section back to primary color

--- a/index - Call To Action.html
+++ b/index - Call To Action.html
@@ -1,4 +1,4 @@
-<section id="contact" class="bg-secondary-bs">
+<section id="contact" class="bg-primary-bs">
     <div class="container-bs">
         <div class="row-bs">
             <div style="margin-bottom: 25px;" class="col-lg-8-bs col-lg-offset-2-bs text-center-bs">
