--- a/index - Call To Action.html
+++ b/index - Call To Action.html
@@ -9,11 +9,11 @@
             </div>
         </div>
         <div class="row-bs">
-            <div class="col-xs-6-bs col-lg-offset-2-bs text-center-bs">
+            <div class="col-xs-6-bs text-center-bs">
                 <i style="color: #fff;" class="fa fa-phone fa-3x"></i>
                 <p style="color: #fff;">(800) 228-5327</p>
             </div>
-            <div class="col-xs-6-bs col-lg-offset-2-bs text-center-bs">
+            <div class="col-xs-6-bs text-center-bs">
                 <i style="color: #fff;" class="fa fa-envelope-o fa-3x"></i>
                 <p style="color: #fff;"><a style="text-decoration: underline;" href="mailto:staffing@supercamp.com">Staffing@SuperCamp.com</a></p>
             </div>
