added stan descriptions and buttons to view more

--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -37,6 +37,7 @@
                                     <hr class="bs">
                                     <strong>June 29 - July 8</strong>
                                     <p>Senior Forum</p>
+                                    <a class="qbutton green" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
                                 </div>
                             </div>
                         </div>
@@ -73,6 +74,7 @@
                                     <p>Senior Forum</p>
                                     <strong>July 8 - July 23</strong>
                                     <p>Quantum Academy</p>
+                                    <a class="qbutton green" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
                                 </div>
                             </div>
                             <div class="col-sm-4-bs text-center-bs">
@@ -102,9 +104,10 @@
                                     <h3>Standford University</h3>
                                     <hr class="bs">
                                     <strong>July 31 - August 5</strong>
-                                    <p>This is the description.</p>
+                                    <p>Senior Forum</p>
                                     <strong>August 8 - 17</strong>
-                                    <p>This is the description.</p>
+                                    <p>Senior Forum</p>
+                                    <a class="qbutton green" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
                                 </div>
                             </div>
                         </div>
