--- a/index - Dates and Locations Holder.html
+++ b/index - Dates and Locations Holder.html
@@ -37,7 +37,7 @@
                                     <hr class="bs">
                                     <strong>June 29 - July 8</strong>
                                     <p>Senior Forum</p>
-                                    <a class="qbutton green" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
                                 </div>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                                     <p>Senior Forum</p>
                                     <strong>July 8 - July 23</strong>
                                     <p>Quantum Academy</p>
-                                    <a class="qbutton green" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
                                 </div>
                             </div>
                             <div class="col-sm-4-bs text-center-bs">
@@ -107,7 +107,7 @@
                                     <p>Senior Forum</p>
                                     <strong>August 8 - 17</strong>
                                     <p>Senior Forum</p>
-                                    <a class="qbutton green" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
+                                    <a class="qbutton green" style="background-color: #34618c !important; border-color: #2a2a2a !important;" href="http://www.supercamp.com/stafftestpage/dates-and-locations/">View More</a>
                                 </div>
                             </div>
                         </div>
